tests/error/num.err
Error: Unclosed delimiter (
   ╭─[tests\error\num.scm:1:6]
   │
 1 │ (3132
   · ┬    │ 
   · ╰────── Unclosed delimiter (
   ·      │ 
   ·      ╰─ Must be closed before this end of file
───╯
Error: Unexpected end of input, expected (, ), -, 0
   ╭─[tests\error\num.scm:1:6]
   │
 1 │ (3132
   ·      │ 
   ·      ╰─ Unexpected end of file
───╯
